@@ -68,8 +68,10 @@ read_box_hdr (FILE *fp, unsigned long *lbox, unsigned long *tbox)
   *tbox = get_unsigned_quad(fp);
   bytesread += 8;
   if (*lbox == 1) {
+    if (get_unsigned_quad(fp) != 0)
+      ERROR("LBox value in JP2 file >32 bits.\nI can't handle this!");
     *lbox = get_unsigned_quad(fp);
-    bytesread += 4;
+    bytesread += 8;
   } else if (*lbox > 1 && *lbox < 8) {
     WARN("Unknown LBox value %lu in JP2 file!", lbox);
   }
@@ -129,7 +131,7 @@ check_ftyp_data (FILE *fp, unsigned long size)
 }
 
 
-static unsigned long
+static void
 read_res__data (ximage_info *info, FILE *fp, unsigned long size)
 {
   unsigned int  VR_N, VR_D, HR_N, HR_D;
@@ -147,8 +149,6 @@ read_res__data (ximage_info *info, FILE *fp, unsigned long size)
     info->xdensity = 72.0/(((double) HR_N / HR_D) * pow(10.0, HR_E) * 0.0254);
     info->ydensity = 72.0/(((double) VR_N / VR_D) * pow(10.0, VR_E) * 0.0254);
   }
-
-  return 10;
 }
 
 static int
@@ -157,30 +157,30 @@ scan_res_ (ximage_info *info, FILE *fp, unsigned long size)
   unsigned long len, lbox, tbox;
   int have_resd = 0;
 
-    while (size > 0) {
+  while (size > 0) {
     len = read_box_hdr(fp, &lbox, &tbox);
     if (lbox == 0) {
       WARN("Unexpected lbox value 0 in JP2 Resolution box.");
       break;
     }
-        switch (tbox) {
-        case JP2_BOX_RESC:
-            if (!have_resd) {
-                read_res__data(info, fp, lbox - len);
-            } else {
+    switch (tbox) {
+    case JP2_BOX_RESC:
+      if (!have_resd) {
+        read_res__data(info, fp, lbox - len);
+      } else {
         seek_relative(fp, lbox - len);
       }
-            break;
-        case JP2_BOX_RESD:
-            read_res__data(info, fp, lbox - len);
+      break;
+    case JP2_BOX_RESD:
+      read_res__data(info, fp, lbox - len);
       have_resd = 1;
-            break;
-        default:
+      break;
+    default:
       WARN("Unknown JPEG 2000 box type in Resolution box.");
       seek_relative(fp, lbox - len);
-        }
-    size -= lbox;
     }
+    size -= lbox;
+  }
 
   return size == 0 ? 0 : -1;
 }
@@ -352,7 +352,7 @@ jp2_include_image (pdf_ximage *ximage, FILE *fp)
 }
 
 int
-jp2_get_bbox (FILE *fp, long *width, long *height,
+jp2_get_bbox (FILE *fp, int *width, int *height,
          double *xdensity, double *ydensity)
 {
   int r;
